--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/jest --watchAll",
-    "test-watch": "node_modules/.bin/jest --watch"
+    "test-watch": "node_modules/.bin/jest --watch",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb-memory-server": "^5.1.9",
-    "mongoose": "^5.6.6"
+    "mongoose": "^5.6.6",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "fs": "0.0.1-security",
